Fix for IE10 overflow bug

--- a/Survey/source/styles/_a-input-singlelineedit.scss
+++ b/Survey/source/styles/_a-input-singlelineedit.scss
@@ -19,9 +19,11 @@ $default-text-width: 197px;
 /* m-input-singlelineedit
  * the molecule gets added by JavaScript when the a-input-singlelineedit
  * includes a pre or post label and therefore requires an additional wrapper
+ * overflow: hidden added to fix issue with display in IE10
  */
 .m-input-singlelineedit {
     margin-bottom: .5em;
+    overflow: hidden;
 
     .a-input-singlelineedit {
         margin-bottom: 0;
